--- a/Phase 5/Selenium Programs/SeleniumWithTestNGWithSimpleWebPage/test-output/old/Default suite/methods-alphabetical.html
+++ b/Phase 5/Selenium Programs/SeleniumWithTestNGWithSimpleWebPage/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="85ff7e">  <td>23/06/28 16:30:00</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;SimpleStaticWebPageTesting.afterTest()[pri:0, instance:com.test.SimpleStaticWebPageTesting@242b836]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1281414889</td>   <td></td> </tr>
-<tr bgcolor="85ff7e">  <td>23/06/28 16:29:57</td>   <td>-2831</td> <td>&nbsp;</td><td title="&gt;&gt;SimpleStaticWebPageTesting.beforeTest()[pri:0, instance:com.test.SimpleStaticWebPageTesting@242b836]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1281414889</td>   <td></td> </tr>
-<tr bgcolor="85ff7e">  <td>23/06/28 16:29:59</td>   <td>-160</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimpleStaticWebPageTesting.indexPageTest()[pri:0, instance:com.test.SimpleStaticWebPageTesting@242b836]">indexPageTest</td> 
-  <td>main@1281414889</td>   <td></td> </tr>
+<tr bgcolor="8aa092">  <td>23/06/28 17:18:08</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterTest()[pri:0, instance:com.test.LoginTest@4f80542f]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@225672073</td>   <td></td> </tr>
+<tr bgcolor="8aa092">  <td>23/06/28 17:18:04</td>   <td>-3356</td> <td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeTest()[pri:0, instance:com.test.LoginTest@4f80542f]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@225672073</td>   <td></td> </tr>
+<tr bgcolor="8aa092">  <td>23/06/28 17:18:07</td>   <td>-692</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.indexPageTest()[pri:0, instance:com.test.LoginTest@4f80542f]">indexPageTest</td> 
+  <td>main@225672073</td>   <td></td> </tr>
 </table>
